Fixup to controlbar spacing

--- a/components/ControlBar/ControlBar.module.scss
+++ b/components/ControlBar/ControlBar.module.scss
@@ -14,6 +14,10 @@
   }
 }
 
+.controlContent {
+  padding-top: 48px;
+}
+
 .container {
   align-items: flex-end;
   display: flex;
