--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -8,7 +8,7 @@
   left: 0;
   max-height: 100vh;
   overflow: auto;
-  padding: $spacing-xl-2 $spacing-lg;
+  padding: ($spacing-xl * 2) $spacing-lg;
   position: fixed;
   right: 0;
   top: 0;
