--- a/pages/Index.module.scss
+++ b/pages/Index.module.scss
@@ -3,7 +3,3 @@
 .articles {
   padding: $spacing-lg 0;
 }
-
-.intro {
-  padding-top: 0;
-}
