--- a/pages/job/[id]/job.module.scss
+++ b/pages/job/[id]/job.module.scss
@@ -5,15 +5,6 @@
   display: flex;
 }
 
-.main {
-  align-items: flex-start;
-  display: flex;
-  flex: 1 1 auto;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding-left: $spacing-sm;
-}
-
 .sidebar {
   flex: 1 1 auto;
   position: sticky;
