--- a/styles/global.scss
+++ b/styles/global.scss
@@ -19,7 +19,7 @@ body {
 }
 
 main {
-  padding-top: 96px;
+  padding-top: 48px;
 }
 
 [aria-hidden="true"] {
